--- a/crossing.html
+++ b/crossing.html
@@ -22,36 +22,6 @@
     position: relative;
     display: inline-block;
   }
-
-  #context, #words_context {
-    position: fixed;
-    top: 0;
-    left: 50px;
-    margin: 0;
-    padding: 10px;
-    font-family: monospace;
-  }
-
-  #question, #words_question {
-    position: fixed;
-    top: 50px;
-    left: 16px;
-    margin: 0;
-    padding: 10px;
-    font-family: monospace;
-  }
-
-  #words_context, #words_question {
-    display: none;
-  }
-
-  #context:hover, #question:hover {
-    display: none;
-  }
-
-  #context:hover + #words_context, #question:hover + #words_question {
-    display: block;
-  }
   </style>
 <body>
   <div id="fade-in"></div>
@@ -121,6 +91,8 @@ ________________________________________________________________________________
 
 ...
 
+Why is crossing the street always so hard...?
+
 
 >
         </pre>
@@ -130,6 +102,8 @@ ________________________________________________________________________________
 
 Someone please let me cross...
 
+I’m right here. I have a backpack. Yet they just keep driving...
+
 
 >
         </pre>
@@ -138,6 +112,8 @@ Someone please let me cross...
         <pre class="asciiAlign">╭─────────────────────────────────── ˚₊‧꒰ა ☆ ໒꒱ ‧₊˚ ───────────────────────────────────┒
 
 ...
+
+Like I'm not even here...
 
 
 >
