--- a/dining.html
+++ b/dining.html
@@ -34,36 +34,6 @@
       transition: opacity 2s ease-in-out;
       pointer-events: none;
     }
-
-    #context, #words_context {
-      position: fixed;
-      top: 0;
-      left: 50px;
-      margin: 0;
-      padding: 10px;
-      font-family: monospace;
-    }
-
-    #question, #words_question {
-      position: fixed;
-      top: 50px;
-      left: 16px;
-      margin: 0;
-      padding: 10px;
-      font-family: monospace;
-    }
-
-    #words_context, #words_question {
-      display: none;
-    }
-
-    #context:hover, #question:hover {
-      display: none;
-    }
-
-    #context:hover + #words_context, #question:hover + #words_question {
-      display: block;
-    }
   </style>
 <body>
   <div id="fade-in"></div>
@@ -141,7 +111,7 @@
       <div id="dialogue-box" class="pointer dialogue-box">
         <pre class="asciiAlign">╭─────────────────────────────────── ˚₊‧꒰ა ☆ ໒꒱ ‧₊˚ ───────────────────────────────────┒
 
-I don't really have an appetite but... I should at least eat something.
+I feel like I'm going to throw up... but I should still eat something...
 
 
 >
@@ -150,7 +120,9 @@ I don't really have an appetite but... I should at least eat something.
       <div id="dialogue-box2" class="pointer dialogue-box" style="display: none;">
         <pre class="asciiAlign">╭─────────────────────────────────── ˚₊‧꒰ა ☆ ໒꒱ ‧₊˚ ───────────────────────────────────┒
 
-Plus I won't be having lunch until noon.
+I won’t get lunch until noon...
+
+I don’t want to be stuck in class with an empty stomach again.
 
 
 >
@@ -159,7 +131,9 @@ Plus I won't be having lunch until noon.
       <div id="dialogue-box3" class="pointer dialogue-box" style="display: none;">
         <pre class="asciiAlign">╭─────────────────────────────────── ˚₊‧꒰ა ☆ ໒꒱ ‧₊˚ ───────────────────────────────────┒
 
-I only have a few minutes to eat... better hurry.
+There’s barely any time left...
+
+I guess I’ll just eat what I can and deal with the rest later.
 
 
 >
@@ -168,7 +142,7 @@ I only have a few minutes to eat... better hurry.
       <div id="dialogue-box4" class="pointer dialogue-box" style="display: none;">
         <pre class="asciiAlign">╭─────────────────────────────────── ˚₊‧꒰ა ☆ ໒꒱ ‧₊˚ ───────────────────────────────────┒
 
-Alright, let's get going.
+Okay... time to go.
 
 
 >
