--- a/mirror.html
+++ b/mirror.html
@@ -40,36 +40,6 @@
     transition: opacity 2s ease-in-out;
     pointer-events: none;
   }
-
-  #context, #words_context {
-    position: fixed;
-    top: 0;
-    left: 50px;
-    margin: 0;
-    padding: 10px;
-    font-family: monospace;
-  }
-
-  #question, #words_question {
-    position: fixed;
-    top: 50px;
-    left: 16px;
-    margin: 0;
-    padding: 10px;
-    font-family: monospace;
-  }
-
-  #words_context, #words_question {
-    display: none;
-  }
-
-  #context:hover, #question:hover {
-    display: none;
-  }
-
-  #context:hover + #words_context, #question:hover + #words_question {
-    display: block;
-  }
 </style>
 <body>
   <div id="fade-in"></div>
@@ -124,7 +94,7 @@
        <div id="dialogue-box1" class="pointer dialogue-box">
          <pre class="asciiAlign">╭─────────────────────────────────── ˚₊‧꒰ა ☆ ໒꒱ ‧₊˚ ───────────────────────────────────┒
 
-Need to look good... what would look good on me...
+I should try to look good... Maybe that’ll help me feel better today...
 
 
 >
@@ -133,7 +103,7 @@ Need to look good... what would look good on me...
       <div id="dialogue-box2" class="pointer dialogue-box" style="display: none;">
         <pre class="asciiAlign">╭─────────────────────────────────── ˚₊‧꒰ა ☆ ໒꒱ ‧₊˚ ───────────────────────────────────┒
 
-Hmm... No... white makes me look fat...
+No... White makes me look fat. What was I thinking...
 
 
 >
@@ -142,7 +112,7 @@ Hmm... No... white makes me look fat...
       <div id="dialogue-box3" class="pointer dialogue-box" style="display: none;">
         <pre class="asciiAlign">╭─────────────────────────────────── ˚₊‧꒰ა ☆ ໒꒱ ‧₊˚ ───────────────────────────────────┒
 
-The colors don't match... and my hair looks awful.
+These colors clash... and my hair’s a mess. It doesn't feel me...
 
 
 >
@@ -151,7 +121,7 @@ The colors don't match... and my hair looks awful.
       <div id="dialogue-box4" class="pointer dialogue-box" style="display: none;">
         <pre class="asciiAlign">╭─────────────────────────────────── ˚₊‧꒰ა ☆ ໒꒱ ‧₊˚ ───────────────────────────────────┒
 
-... It still looks off... but I have no time to continue picking.
+Then again, this is the trend nowadays, right? Maybe I'll fit in with this...
 
 
 >
