--- a/context.html
+++ b/context.html
@@ -46,19 +46,21 @@
 </style>
 <body>
   <div id="fade-in"></div>
-  <pre class="question" id="question">
- ╭╶╶╶╶╮
- : ?? :
- ╰╶╶╶╶╯
-  </pre>
-  <pre class="question" id="words_question">
- ╭╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╮
- : To move between scenes and frames, :
- :    users will sometimes need to    :
- :  click on an area where the mouse  :
- : cursor turns into a hand pointer.  :
- ╰╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╯
-  </pre>
+  <div class="icon-container">
+   <pre class="question" id="question">
+  ╭╶╶╶╶╮
+  : ?? :
+  ╰╶╶╶╶╯
+   </pre>
+   <pre class="question" id="words_question">
+  ╭╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╮
+  : To move between scenes and frames, :
+  :    users will sometimes need to    :
+  :  click on an area where the mouse  :
+  : cursor turns into a hand pointer.  :
+  ╰╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╯
+   </pre>
+  </div>
   <div id="container">
     <div id="container">
       <pre class="pointer" id="self1" onclick="nextFrame('self1')">
