--- a/letters.html
+++ b/letters.html
@@ -1814,11 +1814,20 @@ Context
    display: block;
  }
 
- <pre class="time" id="words_context">
-    ╭╶╶╶╶╶╶╶╶╶╮
-    : Context :
-    ╰╶╶╶╶╶╶╶╶╶╯
+ <div class="icon-container">
+ <pre class="time" id="context">
+╭╶╶╶╶╮
+: ౨ৎ :
+╰╶╶╶╶╯
  </pre>
+ <pre class="time" id="words_context">
+   ╭╶╶╶╶╶╶╶╶╶╮
+   : Context :
+   ╰╶╶╶╶╶╶╶╶╶╯
+ </pre>
+</div>
+
+<div class="icon-container">
  <pre class="question" id="question">
 ╭╶╶╶╶╮
 : ?? :
@@ -1832,3 +1841,4 @@ Context
 : cursor turns into a hand pointer.  :
 ╰╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╯
  </pre>
+</div>
