--- a/mirror.html
+++ b/mirror.html
@@ -43,6 +43,7 @@
 </style>
 <body>
   <div id="fade-in"></div>
+  <div class="icon-container">
   <pre class="time" id="context">
 ╭╶╶╶╶╮
 : ౨ৎ :
@@ -53,6 +54,9 @@
     : Context :
     ╰╶╶╶╶╶╶╶╶╶╯
   </pre>
+</div>
+
+<div class="icon-container">
   <pre class="question" id="question">
 ╭╶╶╶╶╮
 : ?? :
@@ -66,6 +70,7 @@
 : cursor turns into a hand pointer.  :
 ╰╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╯
   </pre>
+</div>
   <div id="container">
     <div id="container">
       <pre class="time" id="clock">
