--- a/morning.html
+++ b/morning.html
@@ -20,6 +20,7 @@
 </style>
 <body>
   <div id="fade-in"></div>
+  <div class="icon-container">
   <pre class="time" id="context">
 ╭╶╶╶╶╮
 : ౨ৎ :
@@ -30,6 +31,9 @@
     : Context :
     ╰╶╶╶╶╶╶╶╶╶╯
   </pre>
+</div>
+
+<div class="icon-container">
   <pre class="question" id="question">
 ╭╶╶╶╶╮
 : ?? :
@@ -43,6 +47,7 @@
 : cursor turns into a hand pointer.  :
 ╰╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╯
   </pre>
+</div>
 </pre>
   <div id="container">
     <div id="container">
