--- a/afternoon.html
+++ b/afternoon.html
@@ -32,16 +32,20 @@
 </style>
 <body>
   <div id="fade-in"></div>
+  <div class="icon-container">
   <pre class="time" id="context">
 ╭╶╶╶╶╮
 : ౨ৎ :
 ╰╶╶╶╶╯
   </pre>
   <pre class="time" id="words_context">
-     ╭╶╶╶╶╶╶╶╶╶╮
-     : Context :
-     ╰╶╶╶╶╶╶╶╶╶╯
+    ╭╶╶╶╶╶╶╶╶╶╮
+    : Context :
+    ╰╶╶╶╶╶╶╶╶╶╯
   </pre>
+</div>
+
+<div class="icon-container">
   <pre class="question" id="question">
 ╭╶╶╶╶╮
 : ?? :
@@ -55,6 +59,7 @@
 : cursor turns into a hand pointer.  :
 ╰╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╯
   </pre>
+</div>
   <div id="container">
     <div id="container">
       <pre class="time" id="clock">
