--- a/crossing.html
+++ b/crossing.html
@@ -25,6 +25,7 @@
   </style>
 <body>
   <div id="fade-in"></div>
+  <div class="icon-container">
   <pre class="time" id="context">
 ╭╶╶╶╶╮
 : ౨ৎ :
@@ -35,6 +36,9 @@
     : Context :
     ╰╶╶╶╶╶╶╶╶╶╯
   </pre>
+</div>
+
+<div class="icon-container">
   <pre class="question" id="question">
 ╭╶╶╶╶╮
 : ?? :
@@ -48,6 +52,7 @@
 : cursor turns into a hand pointer.  :
 ╰╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╯
   </pre>
+</div>
   <div id="container">
     <div id="container">
       <pre class="time" id="clock">
