--- a/dining.html
+++ b/dining.html
@@ -37,6 +37,7 @@
   </style>
 <body>
   <div id="fade-in"></div>
+  <div class="icon-container">
   <pre class="time" id="context">
 ╭╶╶╶╶╮
 : ౨ৎ :
@@ -47,6 +48,9 @@
     : Context :
     ╰╶╶╶╶╶╶╶╶╶╯
   </pre>
+</div>
+
+<div class="icon-container">
   <pre class="question" id="question">
 ╭╶╶╶╶╮
 : ?? :
@@ -60,6 +64,7 @@
 : cursor turns into a hand pointer.  :
 ╰╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╯
   </pre>
+</div>
   <div id="container">
     <div id="container">
       <pre class="time" id="clock">
