--- a/index.html
+++ b/index.html
@@ -34,9 +34,33 @@
     opacity: 1;
     transition: opacity 1s ease-in-out;
   }
+
+  #question, #words_question {
+    position: fixed;
+    top: 0;
+    left: 16px;
+    margin: 0;
+    padding: 10px;
+    font-family: monospace;
+  }
 </style>
 <body>
   <div id="fade-in"></div>
+  <div class="icon-container">
+   <pre class="question" id="question">
+  ╭╶╶╶╶╮
+  : ?? :
+  ╰╶╶╶╶╯
+   </pre>
+   <pre class="question" id="words_question">
+  ╭╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╮
+  : To move between scenes and frames, :
+  :    users will sometimes need to    :
+  :  click on an area where the mouse  :
+  : cursor turns into a hand pointer.  :
+  ╰╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╯
+   </pre>
+  </div>
   <div id="container">
     <div id="container">
       <pre class="pointer" id="self1" onclick="nextFrame('self1')">
